kubernetes/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nas-website
spec: {}
status: {}
