kubernetes/nas-website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nas-website
  name: nas-website-deployment
  namespace: nas-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nas-website
  strategy: {}
  template:
    metadata:
      labels:
        app: nas-website
    spec:
      containers:
        - image: zanamira43/nas_website_nuxt_image:1.0 
          name: nas-website
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources: {}

status: {}
