kubernetes/nas-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas-website-service
  namespace: nas-website
  labels:
    app: nas-website
spec:
  selector:
    app: nas-website
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
