kubernetes/nas-website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-website-ingress
  namespace: nas-website
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - nas.zanamira83.info
    secretName: nas-website-tls
  ingressClassName: nginx
  rules:
  - host: nas.zanamira83.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nas-website-service
            port:
              number: 3000
